# renderables

./: .gitignore  README.md  pyproject.toml
examples/notes/: README.md  main.py
examples/notes/notes/notes/: note.py  notes.py  tags.py  year.py
examples/notes/site/: config.yaml  tags.yaml
examples/notes/site/environments/feed/: note.html
examples/notes/site/environments/index/: note.html
examples/notes/site/environments/single/: note.html
examples/notes/site/plan/: atom.xml  index.html  note.html  page.html
examples/notes/site/plan/static/: style.css
examples/notes/site/years/2024/: example.md
examples/tabs/: README.md  main.py
examples/tabs/site/: config.yaml  tags.yaml
examples/tabs/site/environments/feed/: link.html  tags.html  week.html  year.html
examples/tabs/site/environments/main/: link.html  week.html  year.html
examples/tabs/site/plan/: atom.xml  index.html
examples/tabs/site/plan/static/css/: style.css
examples/tabs/site/years/2021/: 01.yaml
examples/tabs/tabslog/tabslog/: __init__.py  link.py  tabs.py  week.py  year.py
renderables/: __init__.py  environments.py  plan.py  renderable.py  site.py  tags.py
